--- a/src/PieChart.css
+++ b/src/PieChart.css
@@ -1,3 +1,29 @@
-.piechartRoot {
-    /* position: absolute; */
-  }
+.secondModal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border: 1px solid #ccc;
+  background: #fff;
+  overflow: auto;
+  border-radius: 4px;
+  outline: none;
+  padding: 20px;
+}
+  
+.myoverlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.75);
+}
+
+.treeDetail { 
+  padding: 16px
+}
+
+.closeButtonWrapper { 
+  text-align: center;
+}
